--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       href="https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap"
       rel="stylesheet"
     />
-    <title>Vite + React</title>
+    <title>Dev Roast</title>
   </head>
   <body>
     <div id="root"></div>
